pay and pattern service and controller