@@ -1,14 +1,12 @@
 package com.utilitypayments.service;
 
 import com.utilitypayments.dto.UserDTO;
-import com.utilitypayments.exceptions.UserNotFoundException;
 import com.utilitypayments.mapper.UserMapper;
 import com.utilitypayments.models.UserEntity;
 import com.utilitypayments.repo.UserRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -20,18 +18,17 @@ public class UserService {
         this.userMapper = userMapper;
     }
 
-    public UserDTO getUserByEmail(String email) {
-        UserEntity userEntity = userRepository.findUserByEmail(email);
-        if (userEntity == null) {
-            throw new UserNotFoundException("Пользователь не найден с email: " + email);
-        }
-        return userMapper.toUserDTO(userEntity);
-    }
-
     public List<UserDTO> getAllUsers() {
         return userRepository.findAll()
                 .stream()
                 .map(userMapper::toUserDTO)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public UserDTO createUser(UserDTO userDTO) {
+        UserEntity userEntity = userMapper.toUser(userDTO);
+        UserEntity saveUser = userRepository.save(userEntity);
+        return userMapper.toUserDTO(saveUser);
+
     }
 }
